Fix trailing backslash substitution in Bash < 5

--- a/install_sgx_driver.tmpl
+++ b/install_sgx_driver.tmpl
@@ -112,11 +112,11 @@ function apply_patches {
     
     if [[ $patch_metrics == "1" ]]; then
         echo "Applying metrics patch..."
-	echo "$metrics_patch_content" | patch -p1
+	echo "$metrics_patch_content" | sed 's/\\@!-tbs-!@$/\\/g' | patch -p1
     fi
     if [[ $patch_page0 == "1" ]]; then
         echo "Applying page0 patch..."
-	echo "$page0_patch_content" | patch -p1
+	echo "$page0_patch_content" | sed 's/\\@!-tbs-!@$/\\/g' | patch -p1
     fi
 #    if [[ $patch_performance == "1" ]]; then
 #        echo "Applying performance patch..."
