Add support for '--latest' option
Using --latest argument will install the latest upstream driver

--- a/install_sgx_driver.tmpl
+++ b/install_sgx_driver.tmpl
@@ -132,7 +132,6 @@ function apply_patches {
 }
 
 function install_sgx_driver {
-    commit_sha="${COMMIT_SHA}"
     if [[ $install_driver == true || $force_install ]] ; then
         dir=$(mktemp -d)
         cd "$dir"
@@ -140,7 +139,14 @@ function install_sgx_driver {
         git clone https://github.com/intel/linux-sgx-driver.git
 
         cd linux-sgx-driver/
-        git checkout $commit_sha
+
+        if [ -z $install_latest ]; then
+            commit_sha="${COMMIT_SHA}"
+            git checkout $commit_sha
+        else
+            git checkout master
+            commit_sha="$(git rev-parse HEAD)"
+        fi
 
         apply_patches
 
@@ -174,6 +180,8 @@ The following options are supported:
       -p version       installs the version patch
       -p metrics       installs the metrics patch
       -p page0         installs the page0 patch
+
+  -l, --latest         installs the latest upstream driver (not recommended)
 
   -f, --force          replaces existing SGX driver, if installed
   -h, --help           display this help and exit
@@ -229,6 +237,14 @@ function parse_args {
 
         -f|--force)
         force_install=1
+        shift
+        ;;
+
+        -l|--latest)
+        msg_color "warning"
+        echo "WARNING: the installation of latest upstream driver is not recommended."
+        msg_color "default"
+        install_latest=1
         shift
         ;;
 
