--- a/install_sgx_driver.tmpl
+++ b/install_sgx_driver.tmpl
@@ -200,7 +200,7 @@ function install_dkms {
 function remove_dkms_driver {
     dkms_cmd="$(which dkms || true)"
     if [ ! -z $dkms_cmd ]; then
-        for installed_ver in $(sudo $dkms_cmd status $1 | cut -d',' -f2 | sed 's/ //g'); do
+        for installed_ver in $(sudo $dkms_cmd status $1 | cut -d',' -f2 | cut -d':' -f1 | sed 's/ //g'); do
             sudo $dkms_cmd remove $1/$installed_ver --all || true
         done
     fi
@@ -373,34 +373,32 @@ function install_sgx_driver {
 function check_commit {
     local driver_version=$1
     local driver_commit=$2
-    if [[ $driver_version != "DCAP" ]]; then
 
-        echo -e "Driver commit: $driver_commit"
+    echo -e "Driver commit: $driver_commit"
 
-        echo -n "Driver status: [ Checking for a newer version. Please wait... ]"
+    echo -n "Driver status: [ Checking for a newer version. Please wait... ]"
 
-        dir=$(mktemp -d)
-        cd "$dir"
+    dir=$(mktemp -d)
+    cd "$dir"
 
-        if [[ $driver_version == "DCAP" ]]; then
-            git clone ${DCAP_REPOSITORY} driver_source 2> /dev/null
-        else
-            git clone ${OOT_REPOSITORY} driver_source 2> /dev/null
-        fi
-        cd driver_source/
-        
-        local current_commit="$(git rev-parse HEAD)"
-
-        if [[ $current_commit == $driver_commit ]]; then
-            echo -e "\e[0K\rDriver status: Up to date                                      "
-        else
-            echo -e "\e[0K\rDriver status: Outdated - $(($(git rev-list --count $driver_commit..$current_commit) - 1)) new commit(s) available            "
-            update_needed=true
-        fi
-
-        cd "$dir"/..
-        rm -rf "$dir"
+    if [[ $driver_version == "DCAP" ]]; then
+        git clone ${DCAP_REPOSITORY} driver_source 2> /dev/null
+    else
+        git clone ${OOT_REPOSITORY} driver_source 2> /dev/null
     fi
+    cd driver_source/
+
+    local current_commit="$(git rev-parse HEAD)"
+
+    if [[ $current_commit == $driver_commit ]]; then
+        echo -e "\e[0K\rDriver status: Up to date                                      "
+    else
+        echo -e "\e[0K\rDriver status: Outdated - $(($(git rev-list --count $driver_commit..$current_commit) - 1)) new commit(s) available            "
+        update_needed=true
+    fi
+
+    cd "$dir"/..
+    rm -rf "$dir"
 }
 
 # first argument: driver_type [OOT or DCAP]
